chore: add audio assets and implement audio context fix for autoplay policy

--- a/frontend/IronManExperience/index.html
+++ b/frontend/IronManExperience/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/hud.css">
     <link rel="stylesheet" href="css/jarvis.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/viewport.css">
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;700&display=swap" rel="stylesheet">
@@ -225,8 +226,10 @@
     <script src="js/jarvis.js"></script>
     <script src="js/hud.js"></script>
     <script src="js/viewport.js"></script>
+    <script src="js/viewport-enhanced.js"></script>
     <script src="js/missions.js"></script>
     <script src="js/audio.js"></script>
+    <script src="js/audio-fix.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
