chore: implement simplified materials and lighting systems for Iron Man Experience

--- a/frontend/IronManExperience/index.html
+++ b/frontend/IronManExperience/index.html
@@ -220,12 +220,18 @@
     <audio id="repulsorSound" src="assets/audio/repulsor.mp3"></audio>
 
     <!-- Scripts -->
+    <script src="js/three-modules.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/boot-sequence.js"></script>
     <script src="js/jarvis.js"></script>
     <script src="js/hud.js"></script>
+    <script src="js/materials-simple.js"></script>
+    <script src="js/suit-simple.js"></script>
+    <script src="js/lighting-simple.js"></script>
+    <script src="js/post-processing.js"></script>
     <script src="js/viewport.js"></script>
+    <script src="js/viewport-debug.js"></script>
     <script src="js/viewport-enhanced.js"></script>
     <script src="js/missions.js"></script>
     <script src="js/audio.js"></script>
