--- a/frontend/IronManExperience/index.html
+++ b/frontend/IronManExperience/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/hud.css">
     <link rel="stylesheet" href="css/jarvis.css">
+    <link rel="stylesheet" href="css/jarvis-advanced.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/viewport.css">
     
@@ -191,8 +192,8 @@
                 <div class="mode-indicator">MODE: STANDARD</div>
             </div>
 
-            <!-- JARVIS Interface -->
-            <div class="jarvis-interface">
+            <!-- JARVIS Interface (Basic - Will be replaced by Advanced) -->
+            <div class="jarvis-interface" style="display: none;">
                 <div class="jarvis-avatar">
                     <div class="waveform">
                         <span></span><span></span><span></span>
@@ -258,14 +259,18 @@
     <script src="js/boot-particles.js"></script>
     <script src="js/boot-sequence.js"></script>
     <script src="js/jarvis.js"></script>
+    <script src="js/jarvis-advanced.js"></script>
     <script src="js/hud.js"></script>
     <script src="js/materials-simple.js"></script>
     <script src="js/suit-simple.js"></script>
     <script src="js/lighting-simple.js"></script>
     <script src="js/post-processing.js"></script>
     <script src="js/suit-ultra-realistic.js"></script>
+    <script src="js/suit-ultimate-realistic.js"></script>
+    <script src="js/environment-cinematic.js"></script>
+    <script src="js/lighting-cinematic.js"></script>
     <script src="js/viewport.js"></script>
-    <script src="js/viewport-ultra.js"></script>
+    <script src="js/viewport-ultimate.js"></script>
     <script src="js/missions.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/audio-fix.js"></script>
